<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inthebox.VetLab.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/loginTitleText"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginEmailField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_outline"
        android:padding="10dp"
        android:hint="@string/loginEmailHint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/loginPasswordField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginEmailField"
        android:layout_marginTop="39dp"
        android:background="@drawable/input_outline"
        android:padding="10dp"
        android:hint="@string/loginPasswordHint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/loginBtnText" />

    <TextView
        android:id="@+id/loginNewAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/loginNewAccount"
        android:textStyle="bold|italic"/>
</RelativeLayout>
