<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inthebox.VetLab.RegisterActivity">

    <ImageButton
        android:id="@+id/registerProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/registerFirstName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerProfilePic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:background="@drawable/input_outline"
        android:padding="10dp"
        android:hint="@string/registerFirstNameHint"/>

    <EditText
        android:id="@+id/registerLastName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/registerProfilePic"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPersonName"
        android:background="@drawable/input_outline"
        android:padding="10dp"
        android:hint="@string/registerLastNameHint"/>

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:labelFor="@+id/registerEmail"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/registerFirstName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_outline"
        android:padding="10dp"
        android:hint="@string/registerEmailHint"/>

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/registerPasswordHint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_below="@+id/registerEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/registerPhoneNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/registerPhoneHint"
        android:inputType="phone"
        android:padding="10dp"
        android:layout_below="@+id/registerPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/registerBtn" />

</RelativeLayout>
